--- a/src/components/Layouts/Header/Header.scss
+++ b/src/components/Layouts/Header/Header.scss
@@ -77,6 +77,7 @@
       .header-main-content {
         padding-top: 2rem;
         .header-heading {
+          width: max-content;
           font-weight: 700;
           font-size: 72px;
           line-height: 90px;
